# defimind

./: .gitignore  README.md  config.example.toml  pyproject.toml
assets/: README.md
docs/: OBSERVABILITY_CLIENT_ATTRIBUTION.md
docs/mvp-a-phases/: PHASES_INDEX.md  PHASE_0_SCAFFOLD_FIRST_CONTACT.md  PHASE_1_DECOMPOSE.md  PHASE_2_POLISH_TESTS.md  PHASE_3_PUBLIC_RELEASE.md
src/defimind/: __init__.py  _app.py  cli.py
src/defimind/agents/: __init__.py  cleo.py  statetwins.py
src/defimind/client/: __init__.py  client.py  twin.py
src/defimind/config/: __init__.py  config.py
src/defimind/modes/: __init__.py  monitoring.py
src/defimind/orchestration/: __init__.py  runner.py
src/defimind/report/: __init__.py  report.py
tests/: test_client.py  test_config.py  test_live.py  test_modes.py  test_twin.py
