[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defimind"
version = "0.1.1"
description = "DeFiMind's LP analyst agent (Cleo) — monitors Uniswap positions via the DeFiMind MCP endpoint. Analysis only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ian C. Moore" }]
keywords = ["defi", "uniswap", "mcp", "agent", "liquidity", "analytics", "cleo"]
dependencies = ["mcp>=1.27.0"]      # the ONLY runtime dep. NOT defipy.

[project.scripts]
defimind = "defimind.cli:run"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://defimind.ai"
Repository = "https://github.com/defimind-ai/defimind"
Paper = "https://arxiv.org/abs/2605.11522"

[tool.setuptools.packages.find]
where = ["src"]
